# graphql-starlette-aiosql

./: README.md  add_data.py  api.py  pyproject.toml  queries.sql  queries_pg.sql  tests.py
graphql_starlette_aiosql/: Users.db  add_data.py  api.py  queries.sql
tests/: tests.py
