[tool.poetry]
name = "graphql-starlette-aiosql"
version = "0.1.0"
description = ""
authors = ["Shailesh Pandey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiosql = "^9.0"
psycopg2 = "^2.9.9"
ariadne = "^0.21"
starlette = "^0.32.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
